# waic-demo

./: .gitignore  .npmrc  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/engine/: .env.example  README.md  pyproject.toml
apps/engine/assets/manifests/: case-index.json  consensus.json  detail-fan.json  detail-trader.json  finance-list.json  home.json  market-data.json  report.json  src-annual-notes.json  src-annual-pdf.json  src-annual.json  src-broker.json  src-database.json  src-forum.json  src-official.json  src-press.json  src-report.json  src-research.json  src-review.json
apps/engine/assets/site/: case-index.html  consensus.html  fan.html  finance-list.html  home.html  market-data.html  report.html  src-annual-notes.html  src-annual-pdf.html  src-annual.html  src-broker.html  src-database.html  src-forum.html  src-official.html  src-press.html  src-report.html  src-research.html  src-review.html  styles.css  trader.html
apps/engine/src/ap_engine/: __init__.py  cases.py  cli.py  config.py  server.py  storage.py
apps/engine/src/ap_engine/environments/: __init__.py  base.py  investigation.py  real_browser.py  scenes.py  self_page.py
apps/engine/src/ap_engine/loop/: __init__.py  agent_loop.py
apps/engine/src/ap_engine/models/: __init__.py  base.py  mock.py  openai_compatible.py  prompts.py
apps/engine/tools/: render_pages.py  run_shot.sh  shot.py  start_demo.sh  stop.sh
apps/web/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.vue  main.ts  vite-env.d.ts
scripts/: dev.sh
(+15 files in other folders)
